--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 body {
-    overflow-x: hidden;
+   overflow-x: hidden;
     box-sizing: border-box;
+    margin: 0;
     /* font-family: 'Lato', sans-serif !important; */
     font-family: 'Roboto', sans-serif !important;
 }
@@ -76,8 +77,8 @@ body {
     background-attachment: fixed;
     background-size: cover;
     background-repeat: no-repeat;
+    background-position: 0 -300;
     text-align: center;
-   
     color: white; 
 }
 #video-play a {
@@ -90,13 +91,20 @@ body {
 
 #library-text {
     padding-top: 1.5rem;
-    
+    padding-bottom: 1.5rem;
 }
-
+.icon-color {
+    display: inline-block;
+    /* background-image: linear-gradient(to right, #0cbaba, #380036 ); */
+    background-image: linear-gradient(175deg, hsl(280, 100%, 80%) ,  hsl(280, 100%, 60%));
+    /* background-image: linear-gradient(#e66465, #9198e5); */
+    -webkit-background-clip: text;
+    color: transparent;
+}
 #page-header {
     height: 200px;
     background-image: url(/img/image1.jpg);
-    background-position: 0 -360;
+    background-position: 260 0;
     background-attachment: fixed;
     color: white;
     border-bottom: 1px #eee solid;
@@ -121,7 +129,23 @@ body {
     background: #333;
 }
 
-#main-footer {
-    background: darkorchid;
-    color: white;
+
+#gallery {
+    /* background-color: #000000;
+    background-image: linear-gradient(147deg, #000000 13%, #272727 22%); */
+    background-color: #0cbaba;
+    background-image: linear-gradient(315deg, #0cbaba 0%, #380036 74%);
+    background-size: auto;
+}
+.modal-content {
+    /* background-color: rgba(0,0,0,0.1); */
+    
+}
+
+#newsletter{}
+@media screen and (min-width: 1100px) {
+    #gallery {
+        height: 100vh;
+    }
+    }
 }
