--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@ body {
     font-family: 'Roboto', sans-serif !important;
 }
 .text-shadow {
-    text-shadow: 0px 1px 1px #000;
+    text-shadow: 0px 1px 1px rgba(39, 39, 39, .52);
 }
 .text-shadow-dark {
     text-shadow: 0px 1px 1px #fff0ff;
