--- a/css/styles.css
+++ b/css/styles.css
@@ -5,6 +5,12 @@ body {
     /* font-family: 'Lato', sans-serif !important; */
     font-family: 'Roboto', sans-serif !important;
 }
+
+    /* Text Settings */
+.text-default {
+    font-size: 1.1rem;
+    line-height: 1.5;
+}
 .text-shadow {
     text-shadow: 0px 1px 1px rgba(39, 39, 39, .52);
 }
@@ -29,35 +35,6 @@ body {
     border-left: rgba(255, 255, 255, 0.781) 2px solid;
 }
 
-
-
-.carousel-image-1 {
-    
-    background-size: cover;
-}
-
-.carousel-image-2 {
-    
-    background-size: cover;
-}
-
-.carousel-image-3  {
-    
-    background-size: cover;
-}
-
-#home-heading {
-    position: relative;
-    min-height: 200px;
-    background: url(/img/lights.jpg);
-    background-attachment: fixed;
-    background-repeat: no-repeat;
-    text-align: center;
-    color: white;
-}
-#catalog {
-    transform: translate3d();
-}
 .bg-body {
     background-color: #f5f5f5;
     background-image: linear-gradient(270deg, #c7bec6 , #fff0ff );
@@ -96,10 +73,7 @@ body {
 #video-play a {
     color: white;
 }
-.text-default {
-    font-size: 1.1rem;
-    line-height: 1.5;
-}
+
 
 #library-text {
     padding-top: 1.5rem;
@@ -113,34 +87,6 @@ body {
     -webkit-background-clip: text;
     color: transparent;
 }
-#page-header {
-    height: 200px;
-    background-image: url(/img/image1.jpg);
-    background-position: 260 0;
-    background-attachment: fixed;
-    color: white;
-    border-bottom: 1px #eee solid;
-    padding-top: 50px;
-}
-
-.about-img {
-    margin-top: -50px;
-}
-
-#faq .card {
-    border: #444;
-}
-
-#faq a {
-    color: white;
-    text-decoration: none;
-}
-
-#faq .card-body, 
-#faq .card-header {
-    background: #333;
-}
-
 
 #gallery {
     /* background-color: #000000;
@@ -150,17 +96,12 @@ body {
     background-size: auto;
     
 }
-.modal-content {
-    /* background-color: rgba(0,0,0,0.1); */
-    
-}
 
 .modal-dialog {
-    max-width: 1800px;
+    max-width: 1500px;
     margin: 200px auto;
+    padding: 15px;
 }
-
-
 
 .modal-body {
 position:relative;
