--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body {
-   overflow-x: hidden;
+   /* overflow-x: hidden; */
     box-sizing: border-box;
     margin: 0;
     /* font-family: 'Lato', sans-serif !important; */
