--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,8 @@
 body {
-   /* overflow-x: hidden; */
+   overflow-x:hidden;
     box-sizing: border-box;
-    margin: 0;
+    margin:0;
+    padding: 0;
     /* font-family: 'Lato', sans-serif !important; */
     font-family: 'Roboto', sans-serif !important;
 }
