--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,11 @@
-body {
+/* body {
    overflow-x:hidden;
     box-sizing: border-box;
     margin:0;
     padding: 0;
     /* font-family: 'Lato', sans-serif !important; */
     font-family: 'Roboto', sans-serif !important;
-}
+} */
 
     /* Text Settings */
 .text-default {
