--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,13 @@
-/* body {
-   overflow-x:hidden;
+body {
     box-sizing: border-box;
     margin:0;
     padding: 0;
     /* font-family: 'Lato', sans-serif !important; */
     font-family: 'Roboto', sans-serif !important;
-} */
+}
+.site-wrapper {
+    overflow: hidden;
+}
 
     /* Text Settings */
 .text-default {
