--- a/styles.css
+++ b/styles.css
@@ -95,7 +95,7 @@ body {
     background-image: linear-gradient(147deg, #000000 13%, #272727 22%); */
     background-color: #0cbaba;
     background-image: linear-gradient(315deg, #0cbaba 0%, #380036 74%);
-    background-size: auto;
+    background-size: cover;
     
 }
 
@@ -121,7 +121,7 @@ opacity:1;
 }
 
 
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: 950px) {
     #gallery {
         height: 100vh;
     }
